--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -34,6 +34,9 @@
 	<message key="announcement.postedOn">Posted on {$postDate}</message>
 	<message key="announcement.viewLink">More...</message>
 	<message key="announcement.view">View Announcement</message>
+	<message key="common.tasks">Tasks</message>
+	<message key="common.list">List</message>
+	<message key="common.grid">Grid</message>
 	<message key="common.takeMeThere">Take Me There</message>
 	<message key="common.confirmDelete">Are you sure you wish to delete this item? This action cannot be undone.</message>
 	<message key="common.abstract">Abstract</message>
