*8087* Moved content locale keys to PKP lib

--- a/pkp-lib/locale/en_US/manager.xml
+++ b/pkp-lib/locale/en_US/manager.xml
@@ -343,4 +343,31 @@
 	<message key="settings.roles.uniqueAbbrev">You need to define an unique role abbreviature.</message>
 	<message key="settings.roles.roleIdRequired">You need to define a role permission level.</message>
 	<message key="settings.roles.stageIdRequired">You need to define a stage to assign to.</message>
+
+	<!-- Content Management - Footer grid keys -->
+	<message key="grid.content.navigation.footer">Footer</message>
+	<message key="grid.content.navigation.footer.noneExist">There are no current footers.</message>
+	<message key="grid.content.navigation.footer.addCategory">Add Category</message>
+	<message key="grid.action.deleteFooterCategory">Delete Footer Category</message>
+	<message key="grid.content.navigation.footer.FooterLink">Footer Links</message>
+	<message key="grid.content.navigation.footer.editCategory">Edit Category</message>
+	<message key="grid.content.navigation.footer.deleteCategory">Delete Category</message>
+	<message key="grid.content.navigation.footer.deleteCategoryConfirm">Are you sure you wish to delete this category? The action cannot be undone, and links in this category will also be removed.</message>
+	<message key="grid.content.navigation.footer.titleRequired">A title is required.</message>
+	<message key="grid.content.navigation.footer.descriptionRequired">A description is required.</message>
+	<message key="grid.content.navigation.footer.pathRequired">A path is required and it must be unique.</message>
+	<message key="grid.content.navigation.footer.pathInUse">That path is currently in use by another category.</message>
+	<message key="grid.action.addFooterCategoryLink">Add a new footer category</message>
+	<message key="grid.action.editFooterCategory">Edit this footer category</message>
+
+	<!-- Content Management - Social Media keys -->
+	<message key="grid.content.navigation.socialMedia">Social Media</message>
+	<message key="grid.content.navigation.socialMedia.platform">Platform</message>
+	<message key="grid.content.navigation.socialMedia.code">Social Sharing Code Block</message>
+	<message key="grid.content.navigation.socialMedia.platformRequired">You must enter a platform title (Facebook, Google+, etc).</message>
+	<message key="grid.content.navigation.socialMedia.codeRequired">You must enter the code you wish to use to display this social network.</message>
+	<message key="grid.content.navigation.socialMedia.addSocialLink">Add Social Link</message>
+	<message key="grid.content.navigation.socialMedia.includeInCatalog">Use this for each published item in the catalog?</message>
+	<message key="grid.content.navigation.socialMedia.inCatalog">Used In Catalog</message>
+	<message key="grid.action.addMedia">Add a new Social Media type</message>
 </locale>
