--- a/ops/locale/en_US/manager.xml
+++ b/ops/locale/en_US/manager.xml
@@ -654,4 +654,6 @@
 	<!-- Categories -->
 	<message key="manager.setup.categories">Categories</message>
 	<message key="manager.setup.categories.description">Choose the most appropriate categories from the set listed above. Readers will be able to browse by category from the complete journal set.</message>
+
+	<message key="grid.category.path">Path</message>
 </locale>
