--- a/ojs/locale/en_US/locale.xml
+++ b/ojs/locale/en_US/locale.xml
@@ -196,6 +196,7 @@
 	<message key="journal.issn">ISSN</message>
 
 	<!-- User -->
+	<message key="user.profile.profileImage">Profile Image</message>
 	<message key="user.showAllJournals">Show My Journals</message>
 	<message key="user.registerForOtherJournals">Register for Other Journals</message>
 	<message key="user.myJournals">My Journals</message>
