--- a/ojs/locale/en_US/manager.xml
+++ b/ojs/locale/en_US/manager.xml
@@ -442,6 +442,11 @@
 	<message key="manager.setup.useJournalStyleSheet">Journal style sheet</message>
 	<message key="manager.setup.userRegistration">User Registration</message>
 	<message key="manager.setup.useTextTitle">Title text</message>
+	<message key="manager.statistics.defaultMetricDescription">
+		Your journal is configured to record more than one usage metric. Usage statistics will be displayed in severeral contexts.
+		There are cases where a single usage statistic must be used, e.g. to display an orderd list of most-used articles or to rank
+		search results. Please select one of the configured metrics as a default.
+	</message>
 	<message key="manager.statistics.reports">Report Generator</message>
 	<message key="manager.statistics.reports.description">OJS generates reports that track the details associated with processing submissions to the journal from the perspective of submissions, editors, reviewers, and sections, over a given period of time. Reports are generated in CSV format which requires a spreadsheet application to view.</message>
 	<message key="manager.statistics.statistics">Journal Statistics</message>
