--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -251,6 +251,8 @@
 	<message key="debug.notes">Notes:</message>
 	<message key="editor.submissionReview.uploadFile">Upload Review File</message>
 	<message key="editor.submissionReview.uploadAttachment">Upload File</message>
+	<message key="defaultMetric.title">Default Metric</message>
+	<message key="defaultMetric.availableMetrics">Available Metrics</message>
 	<message key="email.addAttachment">Add Attachment</message>
 	<message key="email.addBccRecipient">Add BCC</message>
 	<message key="email.addCcRecipient">Add CC</message>
