--- a/pkp-lib/locale/fr_CA/admin.xml
+++ b/pkp-lib/locale/fr_CA/admin.xml
@@ -12,6 +12,8 @@
   -->
 
 <locale name="fr_CA" full_name = "Français (Canada)">
+	<message key="admin.systemInfo.settingName">Fixation du nom</message>
+	<message key="admin.systemInfo.settingValue">Fixation de la valeur</message>
 	<message key="admin.adminFunctions">Fonctions administratives</message>
 	<message key="admin.auth.confirmDelete">Êtes-vous certain de vouloir supprimer définitivement cette source d'authentification?</message>
 	<message key="admin.auth.create">Créer une source d'authentification</message>
