--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -120,6 +120,7 @@
 	<message key="metadata.property.validationMessage.name-type">Please make sure that you set a valid name type. Supported values are 'personal', 'corporate' and 'conference'.</message>
 	<!-- FIXME: end -->
 
+	<message key="submission.authors">Authors</message>
 	<message key="submission.addFile">Upload File</message>
 	<message key="submission.agencies">Agencies</message>
 	<message key="submission.abstractViews">Abstract Views</message>
