--- a/pkp-lib/locale/fr_CA/submission.xml
+++ b/pkp-lib/locale/fr_CA/submission.xml
@@ -12,6 +12,10 @@
   -->
 
 <locale name="fr_CA" full_name = "Français (Canada)">
+	<message key="common.queue.long.submissionsUnassigned">Soumissions non assignées</message>
+	<message key="common.queue.long.myAssigned">Les soumissions m'ayant été assignées</message>
+	<message key="submission.authors">Auteurs</message>
+	<message key="submission.mySubmissions">Mes soumissions</message>
 	<message key="submission.agencies">Organismes</message>
 	<message key="submission.abstractViews">Vues des résumés</message>
 	<message key="submission.accepted">Accepté</message>
