--- a/ops/locale/hr_HR/locale.xml
+++ b/ops/locale/hr_HR/locale.xml
@@ -158,7 +158,7 @@
 	<!--  Common Journal Terms  --><message key="journal.currentIssue">Trenutni broj</message>
 	<message key="journal.journals">Časopisi</message>
 	<message key="journal.path">Putanja</message>
-	<message key="journal.journal">Časopis</message>
+	<message key="context.context">Časopis</message>
 
 	<!--  User  --><message key="user.userHome">Korisnička</message>
 	<message key="user.showAllJournals">Prikaz mojih časopisa</message>
