--- a/ops/locale/no_NO/locale.xml
+++ b/ops/locale/no_NO/locale.xml
@@ -157,7 +157,7 @@
 	<message key="journal.currentIssue">Nyeste utgave</message>
 	<message key="journal.journals">Tidsskrift</message>
 	<message key="journal.path">Filsti</message>
-	<message key="journal.journal">Tidsskrift</message>
+	<message key="context.context">Tidsskrift</message>
 
 	<!-- User -->
 	<message key="user.showAllJournals">Vis mine tidsskrift</message>
