--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -289,6 +289,7 @@
 	<message key="submission.event.reviewer.reviewResubmitted">Review resubmitted</message>
 	<message key="submission.event.reviewer.reviewRevision">Reviewer revisions file updated</message>
 	<message key="submission.files">Files</message>
+	<message key="submission.files.downloadAll">Download All Files</message>
 	<message key="submission.galley">Galley</message>
 	<message key="submission.history.clearLog">Clear Log</message>
 	<message key="submission.history">History</message>
