--- a/ops/locale/eu_ES/editor.xml
+++ b/ops/locale/eu_ES/editor.xml
@@ -94,7 +94,7 @@
 	<message key="editor.issues.pages">Orrialdeak</message>
 	<message key="editor.navigation.issues">Zenbakiak</message>
 	<message key="editor.navigation.futureIssues">Etorkizuneko zenbakiak</message>
-	<message key="editor.navigation.createIssue">Sortu zenbakia</message>
+	<message key="grid.action.addIssue">Sortu zenbakia</message>
 	<message key="editor.navigation.issueArchive">Aurreko zenbakiak</message>
 	<message key="editor.article.designateReviewVersion">Izendatu jatorrizko fitxategia Ebaluazio-bertsio gisa</message>
 	<message key="editor.article.uploadReviewVersion">Kargatu berrikusitako Ebaluazio-bertsio bat</message>
