--- a/ops/locale/gl_ES/editor.xml
+++ b/ops/locale/gl_ES/editor.xml
@@ -95,7 +95,7 @@
 	<message key="editor.issues.pages">Páxinas</message>
 	<message key="editor.navigation.issues">Números</message>
 	<message key="editor.navigation.futureIssues">Edicións futuras</message>
-	<message key="editor.navigation.createIssue">Crear edición</message>
+	<message key="grid.action.addIssue">Crear edición</message>
 	<message key="editor.navigation.issueArchive">Edicións anteriores</message>
 	<message key="editor.article.designateReviewVersion">Designar o ficheiro orixinal como a versión de revisión</message>
 	<message key="editor.article.uploadReviewVersion">Subir unha versión de Revisión revisada</message>
