--- a/ops/locale/nl_NL/editor.xml
+++ b/ops/locale/nl_NL/editor.xml
@@ -95,7 +95,7 @@
 	<message key="editor.issues.pages">Pagina's</message>
 	<message key="editor.navigation.issues">Issues</message>
 	<message key="editor.navigation.futureIssues">Toekomstige nummers</message>
-	<message key="editor.navigation.createIssue">Nummer aanmaken</message>
+	<message key="grid.action.addIssue">Nummer aanmaken</message>
 	<message key="editor.navigation.issueArchive">Oude nummers</message>
 	<message key="editor.article.designateReviewVersion">Wijs het originele bestand aan als de reviewversie</message>
 	<message key="editor.article.uploadReviewVersion">Laad een herziene reviewversie</message>
