--- a/ops/locale/uk_UA/editor.xml
+++ b/ops/locale/uk_UA/editor.xml
@@ -115,7 +115,7 @@
        <message key="editor.issues.pages">Сторінки</message>
        <message key="editor.navigation.issues">Випуски</message>
        <message key="editor.navigation.futureIssues">Майбутні випуски</message>
-       <message key="editor.navigation.createIssue">Створити випуск</message>
+       <message key="grid.action.addIssue">Створити випуск</message>
        <message key="editor.navigation.issueArchive">Попередні випуски</message>
        <message key="editor.article.designateReviewVersion">Позначити оригінальний файл як версію для рецензування</message>
        <message key="editor.article.uploadReviewVersion">Вивантажити відредаговану версію для рецензування</message>
