--- a/ojs/locale/ml_IN/editor.xml
+++ b/ojs/locale/ml_IN/editor.xml
@@ -105,7 +105,7 @@
 	<message key="editor.issues.pages">പേജുകള്‍</message>
 	<message key="editor.navigation.issues">പതിപ്പുകള്‍</message>
 	<message key="editor.navigation.futureIssues">വരാനുള്ള പതിപ്പുകള്‍</message>
-	<message key="editor.navigation.createIssue">പതിപ്പ് സൃഷ്ടിക്കുക</message>
+	<message key="grid.action.addIssue">പതിപ്പ് സൃഷ്ടിക്കുക</message>
 	<message key="editor.navigation.issueArchive">കഴിഞ്ഞ പതിപ്പുകള്‍</message>
 	<message key="editor.article.designateReviewVersion">റിവ്യൂ വേര്‍ഷനായി ഒറിജിനല്‍ ഫയല്‍ നിയോഗിക്കുക</message>
 	<message key="editor.article.uploadReviewVersion">നവീകരിച്ച റിവ്യൂ വേര്‍ഷന്‍ അപ് ലോഡ് ചെയ്യുക</message>
