--- a/ojs/locale/sr_SR/editor.xml
+++ b/ojs/locale/sr_SR/editor.xml
@@ -106,7 +106,7 @@ Da li ste sigurni da želite da nastavite?</message>
 	<message key="editor.issues.pages">Pages</message>
 	<message key="editor.navigation.issues">Issues</message>
 	<message key="editor.navigation.futureIssues">Future Issues</message>
-	<message key="editor.navigation.createIssue">Create Issue</message>
+	<message key="grid.action.addIssue">Create Issue</message>
 	<message key="editor.navigation.issueArchive">Back Issues</message>
 	<message key="editor.article.designateReviewVersion">Designate the original file as the Review Version</message>
 	<message key="editor.article.uploadReviewVersion">Upload a revised Review Version</message>
