--- a/ojs/locale/id_ID/editor.xml
+++ b/ojs/locale/id_ID/editor.xml
@@ -102,7 +102,7 @@
 	<message key="editor.issues.pages"> Halaman </message> 
 	<message key="editor.navigation.issues">Terbitan</message> 
 	<message key="editor.navigation.futureIssues">Terbitan Akan Datang</message> 
-	<message key="editor.navigation.createIssue">Buat Terbitan Baru</message>	<message key="editor.navigation.issueArchive">Terbitan Terdahulu</message>
+	<message key="grid.action.addIssue">Buat Terbitan Baru</message>	<message key="editor.navigation.issueArchive">Terbitan Terdahulu</message>
 	<message key="editor.article.designateReviewVersion"> Merancang file asli sebagai Versi Review</message>	
 <message key="editor.article.uploadReviewVersion"> Unggah versi review yang sudah direvisi</message>	
 <message key="editor.article.showSuppFile"> Tampilkan file untuk direview</message> 
