--- a/ojs/locale/zh_CN/editor.xml
+++ b/ojs/locale/zh_CN/editor.xml
@@ -98,7 +98,7 @@
 	<message key="editor.issues.pages">页</message>
 	<message key="editor.navigation.issues">刊期</message>
 	<message key="editor.navigation.futureIssues">计划中刊期</message>
-	<message key="editor.navigation.createIssue">创建刊期</message>
+	<message key="grid.action.addIssue">创建刊期</message>
 	<message key="editor.navigation.issueArchive">过刊</message>
 	<message key="editor.article.designateReviewVersion">指定原始文件作为审阅版本</message>
 	<message key="editor.article.uploadReviewVersion">一个上传的修订的审阅版本</message>
